@@ -270,6 +270,12 @@ int dbserver_get(
      return(-3);
    }
 
+   if(mysql_num_rows(res) == 0){
+     mysql_free_result(res);
+     mysql_close(&db);
+     return(-2);
+   }
+
    if((row=mysql_fetch_row(res))==NULL){
      perditiondb_mysql_log("mysql_fetch_row", &db);
      mysql_close(&db);
